# cocohibo

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md
.claude/commands/: next-todo.md
src/: app.rs  events.rs  lib.rs  main.rs  project.rs  ui.rs
tests/: README.md
tests/sample-projects/debugging-session/: error-investigation.jsonl
tests/sample-projects/test-project-1/: basic-conversation.jsonl  broken-message.jsonl  tool-usage-example.jsonl
