[package]
name = "cocohibo"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde-jsonlines = "0.5"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
clap = { version = "4.0", features = ["derive"] }
sublime_fuzzy = "0.7"